--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -255,13 +255,13 @@
     <script src="app/entities/review/review.state.js"></script>
     <script src="app/entities/review/review.service.js"></script>
     <script src="app/entities/review/review.controller.js"></script>
+    <script src="app/entities/item/item-newreview-dialog.controller.js"></script>
     <script src="app/entities/item/item-dialog.controller.js"></script>
     <script src="app/entities/item/item-detail.controller.js"></script>
     <script src="app/entities/item/item-delete-dialog.controller.js"></script>
     <script src="app/entities/item/item.state.js"></script>
     <script src="app/entities/item/item.service.js"></script>
     <script src="app/entities/item/item.controller.js"></script>
-    <script src="app/entities/item/item-newreview-dialog.controller.js"></script>
     <script src="app/entities/image/image-dialog.controller.js"></script>
     <script src="app/entities/image/image-detail.controller.js"></script>
     <script src="app/entities/image/image-delete-dialog.controller.js"></script>
@@ -275,6 +275,12 @@
     <script src="app/entities/client/client.state.js"></script>
     <script src="app/entities/client/client.service.js"></script>
     <script src="app/entities/client/client.controller.js"></script>
+    <script src="app/entities/category/category-dialog.controller.js"></script>
+    <script src="app/entities/category/category-detail.controller.js"></script>
+    <script src="app/entities/category/category-delete-dialog.controller.js"></script>
+    <script src="app/entities/category/category.state.js"></script>
+    <script src="app/entities/category/category.service.js"></script>
+    <script src="app/entities/category/category.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
