#23 hard-coded go to category

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -85,7 +85,7 @@
                                 <a href="category.html"><i class="lnr lnr-laptop-phone color-2"></i></a>
                             </div>
                             <div class="category-header">
-                                <a href="category.html"><h4>Electronics</h4></a>
+                                <a ui-sref="item({category:1})"><h4>Electronics</h4></a>
                             </div>
                             <div class="category-content">
                                 <ul>
@@ -106,7 +106,7 @@
                                         <sapn class="category-counter">3</sapn>
                                     </li>
                                     <li>
-                                        <a href="category.html">TV & DVDs</a>
+                                        <a ui-sref="item({category:3})">TVs</a>
                                         <sapn class="category-counter">3</sapn>
                                     </li>
                                     <li>
