#23 Show counts in main page

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -411,7 +411,7 @@
                 </span>
                         </div>
                         <div class="desc">
-                            <h3 class="counter">2132</h3>
+                            <h3 class="counter">{{vm.itemsCount}}</h3>
                             <p>Items</p>
                         </div>
                     </div>
@@ -424,7 +424,7 @@
                 </span>
                         </div>
                         <div class="desc">
-                            <h3 class="counter">12090</h3>
+                            <h3 class="counter">{{vm.reviewsCount}}</h3>
                             <p>Reviews</p>
                         </div>
                     </div>
@@ -437,7 +437,7 @@
                 </span>
                         </div>
                         <div class="desc">
-                            <h3 class="counter">5243</h3>
+                            <h3 class="counter">{{vm.membersCount}}</h3>
                             <p>Members</p>
                         </div>
                     </div>
