--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -50,27 +50,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Announcements</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Car Pool - Bike Ride</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Charity - Donate - NGO</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Lost - Found</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Tender Notices</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">General Entertainment</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">View all subcategories →</a>
@@ -91,31 +91,30 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Home Electronics</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
-                                        <a href="category.html">LCDs</a>
-                                        <sapn class="category-counter">3</sapn>
+                                        <a href="category.html">Accessories</a>
+
                                     </li>
                                     <li>
-                                        <a href="category.html">Charity - Donate - NGO</a>
-                                        <sapn class="category-counter">3</sapn>
+                                        <a href="category.html">Smart watches</a>
+
                                     </li>
                                     <li>
-                                        <a href="category.html">Mobile & Tablets</a>
-                                        <sapn class="category-counter">3</sapn>
+                                        <a ui-sref="item({category:1})">Mobile & Tablets</a>
+
                                     </li>
                                     <li>
                                         <a ui-sref="item({category:3})">TVs</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
-                                        <a href="category.html">Technical Services</a>
-                                        <sapn class="category-counter">3</sapn>
+                                        <a href="category.html">Video games</a>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Others</a>
-                                        <sapn class="category-counter">1</sapn>
                                     </li>
                                 </ul>
                             </div>
@@ -133,27 +132,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Cleaning Services</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Educational</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Food Services</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Medical</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Office & Home Removals</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">General Entertainment</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">View all subcategories →</a>
@@ -174,27 +173,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Bags</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Beauty Products</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Jewelry</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Shoes M/F</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Tender Notices</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Others</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                 </ul>
                             </div>
@@ -212,27 +211,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Accounts Jobs</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Cleaning & Washing</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Web design</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Design & Code</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Finance Jobs</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Data Entry</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">View all subcategories →</a>
@@ -253,27 +252,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Android Development</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">20 Days HTML/CSS</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">iOS Development with Swift</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">SEO for rest of us</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Mastering in Java</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Others</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">View all subcategories →</a>
@@ -294,27 +293,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Farms</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Home for rent</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Hotels</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Land for sale</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Offices for rent</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Others</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                 </ul>
                             </div>
@@ -332,27 +331,27 @@
                                 <ul>
                                     <li>
                                         <a href="category.html">Cars</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Fancy Cars</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Kids Bikes</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Motor Bikes</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Classic & Modern</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">Kinds</a>
-                                        <sapn class="category-counter">3</sapn>
+
                                     </li>
                                     <li>
                                         <a href="category.html">View all subcategories →</a>
@@ -371,7 +370,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 wow fadeIn" data-wow-delay="0.5s" style="-webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 0.5s; -moz-animation-delay: 0.5s; animation-delay: 0.5s;">
-                        <h3 class="section-title">Featured Reviews</h3>
+                        <h3 class="section-title">Featured Items</h3>
                         <div id="new-products" class="owl-carousel owl-theme" style="opacity: 1; display: block;">
                             <div class="owl-wrapper-outer"><div class="owl-wrapper" style="width: 3760px; left: 0px; display: block; transition: all 800ms ease; transform: translate3d(-235px, 0px, 0px);">
 
