load categories on home page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,7 +60,7 @@
     <!--</div>-->
 
     <!-- Footer Section Start -->
-    <footer>
+    <footer ng-cloak>
         <!-- Footer Area Start -->
         <section class="footer-Content">
             <div class="container">
