--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -38,323 +38,18 @@
                     <div class="col-md-12">
                         <h3 class="section-title">Browse Categories</h3>
                     </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-1 wow fadeInUpQuick" data-wow-delay="0.3s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-users color-1"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Community</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Announcements</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Car Pool - Bike Ride</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Charity - Donate - NGO</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Lost - Found</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Tender Notices</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">General Entertainment</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">View all subcategories →</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="category in vm.topCategories">
                         <div class="category-box border-2 wow fadeInUpQuick" data-wow-delay="0.6s">
                             <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-laptop-phone color-2"></i></a>
+                                <a ui-sref="item({category:category.id})"><i class="lnr lnr-laptop-phone color-{{$index+1}}"></i></a>
                             </div>
                             <div class="category-header">
-                                <a ui-sref="item({category:1})"><h4>Electronics</h4></a>
+                                <a ui-sref="item({category:category.id})"><h4>{{category.name}}</h4></a>
                             </div>
                             <div class="category-content">
                                 <ul>
-                                    <li>
-                                        <a href="category.html">Home Electronics</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Accessories</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Smart watches</a>
-
-                                    </li>
-                                    <li>
-                                        <a ui-sref="item({category:1})">Mobile & Tablets</a>
-
-                                    </li>
-                                    <li>
-                                        <a ui-sref="item({category:3})">TVs</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Video games</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Others</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-3 wow fadeInUpQuick" data-wow-delay="0.9s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-cog color-3"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Services</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Cleaning Services</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Educational</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Food Services</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Medical</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Office & Home Removals</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">General Entertainment</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">View all subcategories →</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-4 wow fadeInUpQuick" data-wow-delay="1.2s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-cart color-4"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Shopping</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Bags</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Beauty Products</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Jewelry</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Shoes M/F</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Tender Notices</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Others</a>
-
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-5 wow fadeInUpQuick" data-wow-delay="1.5s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-briefcase color-5"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Jobs</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Accounts Jobs</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Cleaning & Washing</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Web design</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Design & Code</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Finance Jobs</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Data Entry</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">View all subcategories →</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-6 wow fadeInUpQuick" data-wow-delay="1.8s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-graduation-hat color-6"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Training</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Android Development</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">20 Days HTML/CSS</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">iOS Development with Swift</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">SEO for rest of us</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Mastering in Java</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Others</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">View all subcategories →</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-7 wow fadeInUpQuick" data-wow-delay="2.1s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-apartment color-7"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Real Estate</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Farms</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Home for rent</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Hotels</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Land for sale</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Offices for rent</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Others</a>
-
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12">
-                        <div class="category-box border-8 wow fadeInUpQuick" data-wow-delay="2.3s">
-                            <div class="icon">
-                                <a href="category.html"><i class="lnr lnr-car color-8"></i></a>
-                            </div>
-                            <div class="category-header">
-                                <a href="category.html"><h4>Vehicles</h4></a>
-                            </div>
-                            <div class="category-content">
-                                <ul>
-                                    <li>
-                                        <a href="category.html">Cars</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Fancy Cars</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Kids Bikes</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Motor Bikes</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Classic & Modern</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Kinds</a>
-
-                                    </li>
-                                    <li>
-                                        <a href="category.html">View all subcategories →</a>
+                                    <li ng-repeat="subcat in vm.allCategories | filter: {parent_id: category.id} : true ">
+                                        <a ui-sref="item({category:subcat.id})">{{subcat.name}}</a>
                                     </li>
                                 </ul>
                             </div>
