#12 in add review text input -> text area, improve forms and indexes style

--- a/src/main/webapp/app/entities/client/client-detail.html
+++ b/src/main/webapp/app/entities/client/client-detail.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container">
     <h2><span data-translate="getReviewsApp.client.detail.title">Client</span> {{vm.client.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
