--- a/src/main/webapp/app/entities/review/review-detail.html
+++ b/src/main/webapp/app/entities/review/review-detail.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container">
     <h2><span data-translate="getReviewsApp.review.detail.title">Review</span> {{vm.review.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
