--- a/src/main/webapp/app/entities/source/source-detail.html
+++ b/src/main/webapp/app/entities/source/source-detail.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container">
     <h2><span data-translate="getReviewsApp.source.detail.title">Source</span> {{vm.source.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
