--- a/src/main/webapp/app/entities/client/clients.html
+++ b/src/main/webapp/app/entities/client/clients.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h2 data-translate="getReviewsApp.client.home.title">Clients</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
