--- a/src/main/webapp/app/entities/image/image-detail.html
+++ b/src/main/webapp/app/entities/image/image-detail.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="container">
     <h2><span data-translate="getReviewsApp.image.detail.title">Image</span> {{vm.image.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
