--- a/src/main/webapp/app/entities/review/reviews.html
+++ b/src/main/webapp/app/entities/review/reviews.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h2 data-translate="getReviewsApp.review.home.title">Reviews</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
