fix reload categories, items n etc on home page after login, updated README and make Menu in navbar will be shown only for administrators

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,4 +1,4 @@
-<div ng-cloak>
+<div ng-cloak ng-switch="vm.isAuthenticated()">
     <!-- Start intro section -->
     <section id="intro" class="section-intro">
         <div class="overlay">
