#8 creating client when user is created, fixed login

--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -4,7 +4,7 @@
             <h1 data-translate="register.title">Registration</h1>
 
             <div class="alert alert-success" ng-show="vm.success" data-translate="register.messages.success">
-                <strong>Registration saved!</strong> Please check your email for confirmation.
+                <strong>Registration saved!</strong>
             </div>
 
             <div class="alert alert-danger" ng-show="vm.error" data-translate="register.messages.error.fail">
