Added date sort

--- a/src/main/webapp/app/entities/item/items.html
+++ b/src/main/webapp/app/entities/item/items.html
@@ -81,6 +81,8 @@
                             <option value="name,desc">Name: High to Low</option>
                             <option value="rating,asc">Rating: Low to High</option>
                             <option value="rating,desc">Rating: High to Low</option>
+                            <option value="created,asc">Created Date: Old to New</option>
+                            <option value="created,desc">Created Date: New to Old</option>
                         </select>
                     </div>
                 </div>
