--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -146,6 +146,12 @@
     <script src="app/entities/source/source.state.js"></script>
     <script src="app/entities/source/source.service.js"></script>
     <script src="app/entities/source/source.controller.js"></script>
+    <script src="app/entities/sale/sale-dialog.controller.js"></script>
+    <script src="app/entities/sale/sale-detail.controller.js"></script>
+    <script src="app/entities/sale/sale-delete-dialog.controller.js"></script>
+    <script src="app/entities/sale/sale.state.js"></script>
+    <script src="app/entities/sale/sale.service.js"></script>
+    <script src="app/entities/sale/sale.controller.js"></script>
     <script src="app/entities/review/review-dialog.controller.js"></script>
     <script src="app/entities/review/review-detail.controller.js"></script>
     <script src="app/entities/review/review-delete-dialog.controller.js"></script>
