added shop and acquired

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -146,6 +146,12 @@
     <script src="app/entities/source/source.state.js"></script>
     <script src="app/entities/source/source.service.js"></script>
     <script src="app/entities/source/source.controller.js"></script>
+    <script src="app/entities/shop/shop-dialog.controller.js"></script>
+    <script src="app/entities/shop/shop-detail.controller.js"></script>
+    <script src="app/entities/shop/shop-delete-dialog.controller.js"></script>
+    <script src="app/entities/shop/shop.state.js"></script>
+    <script src="app/entities/shop/shop.service.js"></script>
+    <script src="app/entities/shop/shop.controller.js"></script>
     <script src="app/entities/sale/sale-dialog.controller.js"></script>
     <script src="app/entities/sale/sale-detail.controller.js"></script>
     <script src="app/entities/sale/sale-delete-dialog.controller.js"></script>
@@ -190,6 +196,12 @@
     <script src="app/entities/bookmark/bookmark.state.js"></script>
     <script src="app/entities/bookmark/bookmark.service.js"></script>
     <script src="app/entities/bookmark/bookmark.controller.js"></script>
+    <script src="app/entities/acquired-at/acquired-at-dialog.controller.js"></script>
+    <script src="app/entities/acquired-at/acquired-at-detail.controller.js"></script>
+    <script src="app/entities/acquired-at/acquired-at-delete-dialog.controller.js"></script>
+    <script src="app/entities/acquired-at/acquired-at.state.js"></script>
+    <script src="app/entities/acquired-at/acquired-at.service.js"></script>
+    <script src="app/entities/acquired-at/acquired-at.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
